tests/testWorkflows/invalid_workflows/invalidActionWorkflow.playbook
{
    "name": "invalidActionWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "branches": [
                {
                    "conditions": [
                        {
                            "action_name": "regMatch",
                            "app_name": "HelloWorld",
                            "arguments": [
                                {
                                    "name": "regex",
                                    "value": "(.*)"
                                }
                            ],
                            "transforms": [
                                {
                                    "action_name": "length",
                                    "app_name": "HelloWorld",
                                    "arguments": []
                                }
                            ]
                        }
                    ],
                    "destination_uid": "1",
                    "source_uid": "2",
                    "status": "Success"
                }
            ],
            "start": "2",
            "actions": [
                {
                    "action_name": "invalid",
                    "app_name": "HelloWorld",
                    "arguments": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "name": "1",
                    "position": {},
                    "risk": 0,
                    "uid": "1"
                },
                {
                    "action_name": "helloWorld",
                    "app_name": "HelloWorld",
                    "arguments": [],
                    "name": "start",
                    "position": {},
                    "risk": 0,
                    "uid": "2"
                }
            ]
        }
    ]
}